--- a/AULA12_ex/ex001/style.css
+++ b/AULA12_ex/ex001/style.css
@@ -11,6 +11,17 @@ header h1 {
     font-size: 3em;
     text-align: center;
 }
+#msg{
+    text-align: center;
+    padding: 20px;
+}
+img{
+   width: 300px; 
+   display: block;
+   margin: auto;
+   margin-top: 30px;
+   border-radius: 50%;
+}
 section{
     width: 800px;
     height: 450px;
