--- a/AULA12_ex/exoo2/style.css
+++ b/AULA12_ex/exoo2/style.css
@@ -1,1 +1,27 @@
 @charset "UTF-8";
+
+body{
+    background-color: lightskyblue;
+}
+header{
+    margin-top: 100px;
+    margin-bottom: 20px;
+}
+header h1 {
+    font-size: 3em;
+    text-align: center;
+}
+section{
+    width: 500px;
+    height: 150px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
+
+    margin: auto;
+}
+
+footer{
+    margin-top: 20px;
+    text-align: center;
+}
