--- a/AULA12_ex/ex001/style.css
+++ b/AULA12_ex/ex001/style.css
@@ -1,38 +1,37 @@
 @charset "UTF-8";
-*{margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif;}
+*{margin: 0; padding: 0;}
 body{
-    background-color: beige;
+    background: rgb(107, 165, 241);
+    font: normal 15pt arial;
 }
 header{
     margin-top: 100px;
-    margin-bottom: 20px;
-}
-header h1 {
-    font-size: 3em;
+    color: white;
     text-align: center;
-}
-#msg{
-    text-align: center;
-    padding: 20px;
-}
-img{
-   width: 300px; 
-   display: block;
-   margin: auto;
-   margin-top: 30px;
-   border-radius: 50%;
 }
 section{
-    width: 800px;
-    height: 450px;
-    background-color: beige;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
-
+    background-color: white;
+    text-align: center;
+    border-radius: 10px;
+    padding: 15px;
+    width: 500px;
     margin: auto;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+#msg{
+    padding: 10px;
+    color: white;
+}
+img{
+    width: 300px;
+    display: block;
+    margin: auto;
+    border-radius: 50%;
 }
 
 footer{
-    margin-top: 20px;
+    color: white;
     text-align: center;
+    font-size: initial;
+    margin: 20px;
 }
