--- a/AULA12_ex/exoo2/style.css
+++ b/AULA12_ex/exoo2/style.css
@@ -1,27 +1,28 @@
 @charset "UTF-8";
 
 body{
-    background-color: lightskyblue;
+    background: rgb(107, 165, 241);
+    font: normal 15pt arial;
 }
 header{
-    margin-top: 100px;
-    margin-bottom: 20px;
+    color: white;
+    text-align: center;
 }
-header h1 {
-    font-size: 3em;
+section > h2 {
     text-align: center;
 }
 section{
-    width: 500px;
-    height: 150px;
     background-color: white;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
-
+    border-radius: 10px;
+    padding: 15px;
+    width: 500px;
     margin: auto;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 footer{
-    margin-top: 20px;
+    color: white;
     text-align: center;
+    font-style: italic;
+    margin: 20px;
 }
