--- a/AULA12_ex/exoo2/style.css
+++ b/AULA12_ex/exoo2/style.css
@@ -20,6 +20,10 @@ section{
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
+#res{
+    text-align: center;
+}
+
 footer{
     color: white;
     text-align: center;
